Bug 653637 - Align detail view labels properly in the add-on detail view; ui-r=Boriss, r=dtownsend
UltraBlame original commit: 7f4c811a19f59742adaefc2a6b00677f2ea64792

--- a/toolkit/themes/gnomestripe/mozapps/extensions/extensions.css
+++ b/toolkit/themes/gnomestripe/mozapps/extensions/extensions.css
@@ -4092,23 +4092,6 @@ height
 33px
 ;
 }
-.
-detail
--
-row
--
-value
-{
--
-moz
--
-margin
--
-start
-:
-0
-;
-}
 #
 detail
 -
@@ -4335,15 +4318,6 @@ meta
 -
 rating
 {
--
-moz
--
-margin
--
-start
-:
-0
-;
 -
 moz
 -
