--- a/toolkit/themes/pinstripe/mozapps/extensions/extensions.css
+++ b/toolkit/themes/pinstripe/mozapps/extensions/extensions.css
@@ -5458,23 +5458,6 @@ height
 30px
 ;
 }
-.
-detail
--
-row
--
-value
-{
--
-moz
--
-margin
--
-start
-:
-0
-;
-}
 #
 detail
 -
@@ -5684,15 +5667,6 @@ meta
 -
 rating
 {
--
-moz
--
-margin
--
-start
-:
-0
-;
 -
 moz
 -
