--- a/toolkit/themes/winstripe/mozapps/extensions/extensions.css
+++ b/toolkit/themes/winstripe/mozapps/extensions/extensions.css
@@ -5495,23 +5495,6 @@ height
 30px
 ;
 }
-.
-detail
--
-row
--
-value
-{
--
-moz
--
-margin
--
-start
-:
-0
-;
-}
 #
 detail
 -
@@ -5731,15 +5714,6 @@ meta
 -
 rating
 {
--
-moz
--
-margin
--
-start
-:
-0
-;
 -
 moz
 -
